--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       Case Problem 1
       
       Slate & Pencil Home Page
-      Author: Hesbon Osoro
-      Date: 12/7/22    
+      Author: Nathaniel T. Aglio
+      Date: 3/23/2024    
       
       Filename: sp_home.html
     -->
