--- a/sp_home.html
+++ b/sp_home.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <!--
-      New Perspectives on HTML5 and CSS3, 7th Edition
+      New Perspectives on HTML5 and CSS3, 8th Edition
       Tutorial 3
       Case Problem 1
       
       Slate & Pencil Home Page
-      Author: Hesbon Osoro
-      Date: 12/7/22    
+      Author: Nathaniel T. Aglio
+      Date: 3/23/2024   
       
       Filename: sp_home.html
     -->
